--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,103 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import './assets/checkbox.css';
+
+/* Components */
+
+.navbar {
+  background-color: var(--accent-color1);
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: auto;
+  min-width: 100%;
+}
+
+.navbar .navlink {
+  color: rebeccapurple;
+  text-decoration: none;
+  font-family: Monoton;
+  font-size: smaller;
   text-align: center;
+  margin: auto;
+  color: var(--fg-color);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main-box {
+  background-color: var(--bg-color);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.view-box {
+  background-color: var(--fg-color);
+  width: 42%;
+  margin: 0 auto;
+  min-width: 300px;
+  border-radius: 30px;
+  min-height: 15em;
+  aspect-ratio: 6/8;
+  min-height: fit-content;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media screen and (max-width: 1200px){
+  .view-box {
+    aspect-ratio: 1/2;
   }
 }
 
-.card {
-  padding: 2em;
+.form-title {
+  font-family: Monoton;
 }
 
-.read-the-docs {
-  color: #888;
+.form-label {
+  font-family: Monoton;
+}
+
+.form-input {
+  width: 50%;
+  aspect-ratio: 6/1;
+  border-radius: 15px;
+  background-color: var(--bg-color);
+  outline: none;
+  border: none;
+  color: var(--text-color);
+  padding-left: 5%;
+  margin: 2% auto;
+
+}
+
+.form-input[type="file"] {
+  display: none;
+}
+
+.file-label {
+  width: 55%;
+  aspect-ratio: 6/1;
+  border-radius: 15px;
+  background-color: var(--bg-color);
+  outline: none;
+  border: none;
+  color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Monoton;
+  font-size: x-large;
+  margin: 8% auto;
+}
+
+.file-label:hover {
+  filter: brightness(0.7);
+  color: var(--accent-color1);
+  cursor: pointer;
+}
+
+.cgu-section {
+  display: flex;
+  align-items: center;
+  margin: 0 21%;
+  
+}
+
+.nike-box {
+  width: 1.5em;
+  aspect-ratio: 1/1;
+  background-color: var(--fg-color);
+  border: solid var(--text-color) 1px;
 }
