--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import './assets/checkbox.css';
+@import "./assets/checkbox.css";
 
 /* Components */
 
@@ -27,7 +27,7 @@
 .view-box {
   background-color: var(--fg-color);
   width: 42%;
-  margin: 0 auto;
+  margin: 3vh auto;
   min-width: 300px;
   border-radius: 30px;
   min-height: 15em;
@@ -35,7 +35,7 @@
   min-height: fit-content;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
   .view-box {
     aspect-ratio: 1/2;
   }
@@ -43,6 +43,7 @@
 
 .form-title {
   font-family: Monoton;
+  margin-top: 0;
 }
 
 .form-label {
@@ -59,7 +60,6 @@
   color: var(--text-color);
   padding-left: 5%;
   margin: 2% auto;
-
 }
 
 .form-input[type="file"] {
@@ -92,7 +92,6 @@
   display: flex;
   align-items: center;
   margin: 0 21%;
-  
 }
 
 .nike-box {
@@ -100,4 +99,32 @@
   aspect-ratio: 1/1;
   background-color: var(--fg-color);
   border: solid var(--text-color) 1px;
+}
+
+.candidate-row {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  grid-template-rows: 100%;
+  margin-bottom: 3%;
+  margin-right: 1%;
+}
+.candidate-row button {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: Monoton;
+  font-size: medium;
+  border-radius: 15px;
+  border: solid black 2px;
+}
+
+.candidate-row button:hover {
+  filter: brightness(0.7);
+  color: var(--accent-color1);
+  cursor: pointer;
+}
+
+.text-left {
+  text-align: left;
+  padding-left: 10%;
+  font-size: large;
 }
