--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   --accent-color1: #de6308;
   --accent-color2: #b0eccd;
   --special-color: #bcbcbc;
+  --special-color2: #2d9e5a;
 }
 #root {
   margin: 0 auto;
